REST API additional binding
